--- a/webpages/themes/wiscon/main.css
+++ b/webpages/themes/wiscon/main.css
@@ -6,14 +6,14 @@
     background-color: #000000 !important;
 }
   
-.dropdown-menu.show {
+.navbar .dropdown-menu.show {
     background-color: #24890d;
 }
-.dropdown-item {
+.navbar .dropdown-item {
     color: white;
     font-size: 0.6875rem;
 }
-.dropdown-item:focus, .dropdown-item:hover {
+.navbar .dropdown-item:focus, .dropdown-item:hover {
     background-color: #41a62a;
     color: white;
 }
