- port functionality from PlanZ to WisCon

--- a/webpages/css/zambia_common.css
+++ b/webpages/css/zambia_common.css
@@ -58,12 +58,10 @@ header p {
   width: 100%;
 }
 .header.participant-header {
-  background-color: #dedcff;
-  background-image: linear-gradient(0deg, #e5e5e5 0%, #c3c1db 57%, #8d86d9 87.3%, #2c14ff 100%);
+  background-color: #311afc;
 }
 .header.staff-header {
-  background-color: #a7d2a5;
-  background-image: linear-gradient(0deg, #f0f0f0 0%, #f0f0f0 24%, #b8cfbd 54%, #73ba83 74%, #0d8026 100%);
+  background-color: #0f8128;
   color: black;
 }
 .header-contents {
