--- a/webpages/css/zambia_common.less
+++ b/webpages/css/zambia_common.less
@@ -113,12 +113,10 @@ header {
 
     &.participant-header {
         background-color: @participantHeaderNoGradientColor;
-        background-image: linear-gradient(0deg, @participantHeaderShrunkGradientColor4 0%, @participantHeaderShrunkGradientColor3 30.2%, @participantHeaderShrunkGradientColor2 71.8%, @participantHeaderShrunkGradientColor1 100%);
     }
 
     &.staff-header {
         background-color: @staffHeaderNoGradientColor;
-        background-image: linear-gradient(0deg, @staffHeaderGradientColor4 0%, @staffHeaderGradientColor3 54%, @staffHeaderGradientColor2 74%, @staffHeaderGradientColor1 100%);
     }
 }
 
@@ -155,8 +153,7 @@ header {
 /* End Header Stuff */
 
 body:not(.full-page) {
-    background-image: url('../images/light_honeycomb.png');
-    background-repeat: repeat;
+    background-color: #d1d1d1;
 }
 
 #ParticipantView {
