--- a/webpages/css/zambia_include.less
+++ b/webpages/css/zambia_include.less
@@ -23,7 +23,7 @@
 @staffHeaderGradientColor2: rgba(115,186,131,1);
 @staffHeaderGradientColor3: rgba(184,207,189,1);
 @staffHeaderGradientColor4: rgba(240,240,240,1);
-@staffHeaderNoGradientColor: #0f8128;
+@staffHeaderNoGradientColor: #12992f;
 
 @participantHeaderFullGradientColor1: #2c14ff;
 @participantHeaderFullGradientColor2: #8d86d9;
@@ -33,7 +33,7 @@
 @participantHeaderShrunkGradientColor2: #6156e0;
 @participantHeaderShrunkGradientColor3: #9e99dc;
 @participantHeaderShrunkGradientColor4: @participantHeaderFullGradientColor4;
-@participantHeaderNoGradientColor: #311afc;
+@participantHeaderNoGradientColor: #6452fd;
 
 @problemColor: #d05b5e;
 @problemBackgroundColor: #fbc8bb;
@@ -48,12 +48,42 @@
 
 @font-family: Verdana, helvetica, san-serif;
 
-/* Old (BS2) Zambia colors only */
+/* Old (BS2) PlanZ colors only */
 @linkColor: #0040c0;
 @bs2-success-bg-color: #dff0d8;
 @bs2-success-border-color: #468847;
 @bs2-info-bg-color: #d9edf7;
 @bs2-info-border-color: #3a87ad;
 
+/* BS4 Alert Colors */
+@bs4-alert-primary-bg-color: #cce5ff;
+@bs4-alert-primary-text-color: #004085;
+@bs4-alert-primary-border-color: #b8daff;
 
+@bs4-alert-secondary-bg-color: #e2e3e5;
+@bs4-alert-secondary-text-color: #383d41;
+@bs4-alert-secondary-border-color: #d6d8db;
 
+@bs4-alert-success-bg-color: #d4edda;
+@bs4-alert-success-text-color: #155724;
+@bs4-alert-success-border-color: #c3e6cb;
+
+@bs4-alert-danger-bg-color: #f8d7da;
+@bs4-alert-danger-text-color: #721c24;
+@bs4-alert-danger-border-color: #f5c6cb;
+
+@bs4-alert-warning-bg-color: #fff3cd;
+@bs4-alert-warning-text-color: #856404;
+@bs4-alert-warning-border-color: #ffeeba;
+
+@bs4-alert-info-bg-color: #d1ecf1;
+@bs4-alert-info-text-color: #0c5460;
+@bs4-alert-info-border-color: #bee5eb;
+
+@bs4-alert-light-bg-color: #fefefe;
+@bs4-alert-light-text-color: #818182;
+@bs4-alert-light-border-color: #fdfdfe;
+
+@bs4-alert-dark-bg-color: #d6d8d9;
+@bs4-alert-dark-text-color: #1b1e21;
+@bs4-alert-dark-border-color: #c6c8ca;
