--- a/webpages/css/zambia_bs4.css
+++ b/webpages/css/zambia_bs4.css
@@ -234,3 +234,13 @@ table.dataTable.table-sm tbody th, table.dataTable.table-sm tbody td {
 .bg-warning-lighter a {
   color: #533f03;
 }
+@media (pointer: fine) {
+  .visible-on-hover button.btn {
+      display: none;
+      transition: 1s;
+  }
+  .visible-on-hover:hover button.btn {
+      display: inline;
+      transition: 1s;
+  }
+}
